@@ -2,6 +2,8 @@ DarkIce next release
 
     o ported to OpenBSD and NetBSD, though real-time scheduling not supported,
       since it is not implemented in OpenBSD / NetBSD
+    o added possibility to downsample from stereo to mono when encoding
+      to Ogg Vorbis, thanks to Deti Fliegl, <deti@fliegl.de>
 
 15-02-2004: DarkIce 0.14 released
 
